Sun Dec 26 19:00:22 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/if_else.s: Add ELIF tests.
	* symbol.c (symbolPrint): Make more robust.
	* decode.c (oDecodeTable): Add ARM, ELIF, THUMB and THUMBX.
	* m_cpu.c, m_cpu.h (c_thumb, c_thumbx): New.
	* whileif.c (if_skip): Add ELIF support.
	* whileif.c, whileif.h (c_elif): New.
	* input.c (Input_Symbol): Allow symbols to start with an underscore
	character.

Sun Dec 26 16:47:19 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/require8_preserve8.s: New.
	* decode.c (oDecodeTable): Add PRESERVE8/REQUIRE8.
	* m_cpumem.c (dstreglist): Add check for when PRESERVE8 is declared.
	* filestack.c (File_GetLine): Fix no-newline-before-EOF case.
	* area.c, area.h (c_preserve8, c_require8, gArea_Require8,
	gArea_Preserve8, gArea_Preserve8Guessed): New.
	* lexAcorn.c (lexAcornPrim): Drop {MODULE}.
	* get.h (GET_BASE_MULTI): New.
	* main.c (option_rma_module, -module): Remove.
	(main): Support double dash option prefix, add implemented -apcs,
	more foolproof -From/-o/-To parsing.
	* main.h (option_rma_module): Remove.

Sun Dec 26 02:54:13 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
  
	* regression/tests_pass/loadstore3.s: Rename to...
	* regression/tests_pass/ldm_stm_pop_push.s: ...this.  Add PUSH/POP
	tests.
	* decode.c (oDecodeTable): Add PUSH/POP.
	* m_cpumem.c (dstreglist): Add isPushPop parameter, drop #<num reg>
	feature.
	(m_ldm, m_stm): Follow optionCondDirLdm/optionCondDirStm merge.
	(m_pop,m_push): New.
	* m_cpumem.h (m_pop, m_push): New.
	* option.c, option.h (optionCondLdmStm): Merged from optionCondDirLdm
	and optionCondDirStm.

Tue Dec 21 22:04:53 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* put.c (Put_Ins): Renamed from putIns.  Reimplement this using
	Put_InsWithOffset.
	* put.h (Put_Ins): Renamed from putIns.
	* m_cpuctrl.c, m_cop.c, m_cpumem.c, m_copmem.c, m_cpu.c, m_fpumem.c,
	m_fpu.c: Follow putIns to Put_Ins rename.